--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     --link-color-hover: #404BBF;
     --footer-desc-color: #E7E9FC;
     --btn-background-color: #F4F4FD;
-
 }
 
 h1, 
@@ -146,6 +145,7 @@ body {
 }
 
 .hero-caption {
+    padding-top: 188px;
     margin-bottom: 48px;
     font-weight: 700;
     font-size: 56px;
@@ -154,13 +154,13 @@ body {
     color: var(--primery-background-color);
 }
 
-.hero-btn {
-    padding-left: 32px;
-    padding-top: 16px;
-    padding-right: 32px;
-    padding-bottom: 16px;
-    min-width: 169px;
+.btn-container{
+    padding-bottom: 188px;
+}
 
+.hero-btn {
+    padding: 16px 32px;
+    min-width: 169px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -172,6 +172,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
+
 .hero-btn:hover,
 .hero-btn:focus {
     background: var(--link-color-hover);
@@ -179,11 +180,7 @@ body {
     border-radius: 4px;
 }
 
-/* Feature */
-.feature-item {
-    
-}
-
+/* Hpdden caption */
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -197,7 +194,21 @@ body {
     margin: -1px;
 }
 
+/* Feature */
+.feature-item {
+    display: flex;
+}
+
+.feature-items {
+    margin-right: 24px;
+}
+
+.feature-items:last-child {
+    margin: 0;
+}
+
 .feature-captions {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -210,7 +221,12 @@ body {
 }
 
 /* What are we doing */
+.work {
+    padding-top: 0;
+}
+
 .general-title {
+    margin-bottom: 72px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.1;
@@ -220,11 +236,36 @@ body {
 }
 
 .work-item {
-    list-style: none;
+    display: flex;
+}
+
+.work-items {
+    margin-right: 24px;
+}
+
+.work-items:last-child {
+    margin-right: 0;
 }
 
 /* Our Team */
+.team {
+    background-color: var(--btn-background-color);
+}
+
+.team-item {
+    display: flex;
+}
+
+.team-items {
+    margin-right: 24px;
+}
+
+.team-foto {
+    margin-bottom: 32px;
+}
+
 .team-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -238,23 +279,24 @@ body {
     text-align: center;
 }
 
-/* Footer */
-footer {
-    background-color: var(--title-text-color);
-}
-
-.logo-item2 {
-    color: var(--btn-background-color);
-}
-
-.footer-desc {
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--footer-desc-color);
-}
-
 /* Works */
+.btn{
+    display: flex;
+    justify-content: center;
+    padding-top: 168px;
+    padding-bottom: 72px;
+}
+
+.btn-list {
+    margin-right: 24px;
+}
+
+.btn-list:last-child{
+    margin-right: 0;
+}
+
 .btn-item {
+    padding: 12px 24px;
     justify-content: center;
     align-items: center;
     background: var(--btn-background-color);
@@ -276,7 +318,40 @@ footer {
     color: var(--primery-background-color);
 }
 
+.work-primery {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 120px;
+}
+
+.work-item-list {
+    margin-right: 24px;
+    margin-bottom: 48px;
+}
+
+.work-item-list:nth-child(3n){
+    margin-right: 0;
+}
+
+.work-item-list:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
+
+.work-img {
+    display: block;
+    margin: 0;
+}
+
+.work-cont-desc {
+    border-right: 1px solid var(--header-color-line);
+    border-left: 1px solid var(--header-color-line);
+    border-bottom: 1px solid var(--header-color-line);
+}
+
 .work-title {
+    padding-top: 32px;
+    margin-left: 16px;
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -284,6 +359,39 @@ footer {
 }
 
 .work-desc {
+    padding-bottom: 32px;
+    margin-left: 16px;
     font-size: 16px;
     line-height: 1.5;
+}
+
+/* Footer */
+.footer {
+    width: 1440px;
+    background-color: var(--title-text-color);
+}
+
+.footer-container{
+    padding-top: 100px;
+    margin-left: 156px;
+}
+
+.footer-logo {
+    display: block;
+    padding: 0;
+    margin-bottom: 8px;
+    margin-right: 0;
+}
+
+.logo-item2 {
+    color: var(--btn-background-color);
+    margin-bottom: 8px;
+}
+
+.footer-desc {
+    padding-bottom: 100px;
+    max-width: 264px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--footer-desc-color);
 }
