--- a/css/style.css
+++ b/css/style.css
@@ -27,17 +27,20 @@ p {
 
 body {
     margin: 0;
-    width: 1440px;
     font-family: 'Roboto', sans-serif;
     color: var(--primery-text-color);
     background-color: var(--primery-background-color);
     letter-spacing: 0.02em;
 }
 
+.site-img {
+    display: block;
+}
+
 /* Header */
 .container {
     display: block;
-    width: 1128px;
+    width: 1158px;
 
     padding-left: 15px;
     padding-right: 15px;
@@ -56,6 +59,7 @@ body {
 
 .site-nav{
     display: flex;
+    align-items: center;
 }
 
 .site-nav-item{
@@ -71,9 +75,7 @@ body {
 }
 
 /* logo */
-.logo {
-    padding-top: 24px;
-    padding-bottom: 24px;
+.logo { 
     margin-right: 76px;
 
     text-decoration: none;
@@ -91,9 +93,9 @@ body {
 
 /*Link for other pages*/
 .site-nav-link {
-    display: block;
+    display: inline-block;
     padding-top: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 23px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -106,7 +108,7 @@ body {
     color: var(--link-color);
     border-bottom: 4px solid var(--link-color-hover);
     border-radius: 2px;
-    padding-bottom: 20px;
+    padding-bottom: 19px;
 }
 
 /* Adress */
@@ -145,20 +147,17 @@ body {
 .hero {
     background: var(--primery-text-color);
     text-align: center;
+    padding: 188px 0;
+
 }
 
 .hero-caption {
-    padding-top: 188px;
     margin-bottom: 48px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.1;
     text-align: center;
     color: var(--primery-background-color);
-}
-
-.btn-container{
-    padding-bottom: 188px;
 }
 
 .hero-btn {
@@ -263,6 +262,10 @@ body {
     margin-right: 24px;
 }
 
+.team-items:last-child {
+    margin-right: 0;
+}
+
 .team-foto {
     margin-bottom: 32px;
 }
@@ -283,11 +286,15 @@ body {
 }
 
 /* Works */
+.section.portfolio {
+    padding-top: 96px;
+    padding-bottom: 0;
+}
+
 .btn{
     display: flex;
     justify-content: center;
-    padding-top: 168px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
 }
 
 .btn-list {
@@ -328,32 +335,27 @@ body {
 }
 
 .work-item-list {
-    margin-right: 24px;
-    margin-bottom: 48px;
+    flex-basis: calc((100% - 48px) / 3);
+    padding-right: 24px;
+    padding-bottom: 48px;
 }
 
 .work-item-list:nth-child(3n){
-    margin-right: 0;
+    padding-right: 0;
 }
 
 .work-item-list:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
-
-.work-img {
-    display: block;
-    margin: 0;
+    padding-bottom: 0;
 }
 
 .work-cont-desc {
+    padding: 32px 0 32px 16px;
     border-right: 1px solid var(--header-color-line);
     border-left: 1px solid var(--header-color-line);
     border-bottom: 1px solid var(--header-color-line);
 }
 
 .work-title {
-    padding-top: 32px;
-    margin-left: 16px;
     margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
@@ -362,25 +364,23 @@ body {
 }
 
 .work-desc {
-    padding-bottom: 32px;
-    margin-left: 16px;
     font-size: 16px;
     line-height: 1.5;
 }
 
 /* Footer */
 .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: var(--title-text-color);
 }
 
 .footer-container{
-    padding-top: 100px;
-    margin-left: 156px;
+    max-width: 264px;
 }
 
 .footer-logo {
-    display: block;
-    padding: 0;
+    display: inline-block;
     margin-bottom: 8px;
     margin-right: 0;
 }
@@ -391,8 +391,6 @@ body {
 }
 
 .footer-desc {
-    padding-bottom: 100px;
-    max-width: 264px;
     font-size: 16px;
     line-height: 1.5;
     color: var(--footer-desc-color);
