--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ body {
 }
 
 .team-title {
-    padding-bottom: 8px;
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -282,7 +282,7 @@ body {
 }
 
 .team-prof {
-    padding-bottom: 8px;
+    margin-bottom: 8px;
     font-size: 16px;
     line-height: 1.2;
     text-align: center;
